# crypto-pay-api

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
examples/: axum_webhook.rs
src/: client.rs  error.rs  lib.rs  model.rs  prelude.rs  serde_helpers.rs  test_utils.rs  traits.rs
src/api/: balance.rs  check.rs  exchange.rs  invoice.rs  misc.rs  mod.rs  transfer.rs
src/client/: builder.rs  mod.rs
src/error/: mod.rs
src/models/: app_stats.rs  balance.rs  check.rs  currency.rs  exchange_rate.rs  invoice.rs  mod.rs  response.rs  transfer.rs  webhook.rs
src/models/check/: builder.rs  mod.rs  params.rs
src/models/invoice/: builder.rs  mod.rs  params.rs
src/models/stats/: builder.rs  mod.rs  params.rs
src/models/transfer/: builder.rs  mod.rs  params.rs
src/utils/: mod.rs  serde_helpers.rs  types.rs
src/validation/: amount.rs  count.rs  mod.rs
src/webhook/: axum.rs  config.rs  handler.rs  mod.rs
tests/: integration_api.rs  issue_63.rs
