[package]
name = "crypto-pay-api"
version = "0.2.0"
edition = "2021"
description = "A Rust client library for Crypto Pay API provided by Telegram CryptoBot"
license = "MIT"
authors = ["Jie Wang <hi@jiewa.ng>"]
repository = "https://github.com/escwxyz/cypto-pay-api"
documentation = "https://docs.rs/cypto-pay-api"
readme = "README.md"
keywords = ["telegram", "crypto", "api", "blockchain", "telegram-bot"]
categories = ["finance", "api-bindings"]

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
hex = { version = "0.4.3" }
hmac = { version = "0.12.1" }
reqwest = { version = "0.12.23", features = ["json"] }
rust_decimal = "1.38.0"
rust_decimal_macros = "1.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = { version = "0.10.9" }
thiserror = "2.0.17"

[dev-dependencies]
mockito = "1.7.1"
axum = { version = "0.8.7" }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2" }
futures = "0.3"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
