[package]
authors = ["Jie Wang <hi@jiewa.ng>"]
categories = ["finance", "api-bindings"]
description = "A Rust client library for Crypto Pay API provided by Telegram CryptoBot"
documentation = "https://docs.rs/cypto-pay-api"
edition = "2021"
keywords = ["telegram", "crypto", "api", "blockchain", "telegram-bot"]
license = "MIT"
name = "crypto-pay-api"
readme = "README.md"
repository = "https://github.com/escwxyz/cypto-pay-api"
version = "0.2.1"

[dependencies]
async-trait = "0.1.89"
chrono = {version = "0.4.42", features = ["serde"]}
hex = {version = "0.4.3"}
hmac = {version = "0.12.1"}
reqwest = {version = "0.13.1", features = ["json"]}
rust_decimal = "1.40.0"
rust_decimal_macros = "1.40.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
sha2 = {version = "0.10.9"}
thiserror = "2.0.18"

[dev-dependencies]
axum = {version = "0.8.8"}
futures = "0.3"
mockito = "1.7.2"
tokio = {version = "1.49.0", features = ["full"]}
tower = {version = "0.5.3"}

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(tarpaulin)']}
